# dictu-ui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mod.du
src/: dictu-ui.c  dictu-ui.h  mac_location.h  mac_location.mm  mac_location_interface.h  skia-wrapper.cc  skia-wrapper.h
tests/: create_app.sh  info.plist  location.du  merge.du  png.du  simple.du  weathertest.sh
